ocaml/lex/parser.output
   0  $accept : %entry% $end

   1  lexer_definition : header named_regexps refill_handler Trule definition other_definitions header Tend

   2  header : Taction
   3         |

   4  named_regexps : named_regexps Tlet Tident Tequal regexp
   5                |

   6  other_definitions : other_definitions Tand definition
   7                    |

   8  refill_handler : Trefill Taction
   9                 |

  10  definition : Tident arguments Tequal Tparse entry
  11             | Tident arguments Tequal Tparse_shortest entry

  12  arguments : Tident arguments
  13            |

  14  entry : case rest_of_entry
  15        | Tor case rest_of_entry

  16  rest_of_entry : rest_of_entry Tor case
  17                |

  18  case : regexp Taction

  19  regexp : Tunderscore
  20         | Teof
  21         | Tchar
  22         | Tstring
  23         | Tlbracket char_class Trbracket
  24         | regexp Tstar
  25         | regexp Tmaybe
  26         | regexp Tplus
  27         | regexp Thash regexp
  28         | regexp Tor regexp
  29         | regexp regexp
  30         | Tlparen regexp Trparen
  31         | Tident
  32         | regexp Tas ident

  33  ident : Tident

  34  char_class : Tcaret char_class1
  35             | char_class1

  36  char_class1 : Tchar Tdash Tchar
  37              | Tchar
  38              | char_class1 char_class1

  39  %entry% : '\001' lexer_definition

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . lexer_definition  (39)
	header : .  (3)

	Taction  shift 3
	Trule  reduce 3
	Trefill  reduce 3
	Tlet  reduce 3

	lexer_definition  goto 4
	header  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	header : Taction .  (2)

	.  reduce 2


state 4
	%entry% : '\001' lexer_definition .  (39)

	.  reduce 39


state 5
	lexer_definition : header . named_regexps refill_handler Trule definition other_definitions header Tend  (1)
	named_regexps : .  (5)

	.  reduce 5

	named_regexps  goto 6


state 6
	lexer_definition : header named_regexps . refill_handler Trule definition other_definitions header Tend  (1)
	named_regexps : named_regexps . Tlet Tident Tequal regexp  (4)
	refill_handler : .  (9)

	Trefill  shift 7
	Tlet  shift 8
	Trule  reduce 9

	refill_handler  goto 9


state 7
	refill_handler : Trefill . Taction  (8)

	Taction  shift 10
	.  error


state 8
	named_regexps : named_regexps Tlet . Tident Tequal regexp  (4)

	Tident  shift 11
	.  error


state 9
	lexer_definition : header named_regexps refill_handler . Trule definition other_definitions header Tend  (1)

	Trule  shift 12
	.  error


state 10
	refill_handler : Trefill Taction .  (8)

	.  reduce 8


state 11
	named_regexps : named_regexps Tlet Tident . Tequal regexp  (4)

	Tequal  shift 13
	.  error


state 12
	lexer_definition : header named_regexps refill_handler Trule . definition other_definitions header Tend  (1)

	Tident  shift 14
	.  error

	definition  goto 15


state 13
	named_regexps : named_regexps Tlet Tident Tequal . regexp  (4)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 23


state 14
	definition : Tident . arguments Tequal Tparse entry  (10)
	definition : Tident . arguments Tequal Tparse_shortest entry  (11)
	arguments : .  (13)

	Tident  shift 24
	Tequal  reduce 13

	arguments  goto 25


state 15
	lexer_definition : header named_regexps refill_handler Trule definition . other_definitions header Tend  (1)
	other_definitions : .  (7)

	.  reduce 7

	other_definitions  goto 26


state 16
	regexp : Tident .  (31)

	.  reduce 31


state 17
	regexp : Tchar .  (21)

	.  reduce 21


state 18
	regexp : Tstring .  (22)

	.  reduce 22


state 19
	regexp : Tunderscore .  (19)

	.  reduce 19


state 20
	regexp : Teof .  (20)

	.  reduce 20


state 21
	regexp : Tlbracket . char_class Trbracket  (23)

	Tchar  shift 27
	Tcaret  shift 28
	.  error

	char_class  goto 29
	char_class1  goto 30


state 22
	regexp : Tlparen . regexp Trparen  (30)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 31


state 23
	named_regexps : named_regexps Tlet Tident Tequal regexp .  (4)
	regexp : regexp . Tstar  (24)
	regexp : regexp . Tmaybe  (25)
	regexp : regexp . Tplus  (26)
	regexp : regexp . Thash regexp  (27)
	regexp : regexp . Tor regexp  (28)
	regexp : regexp . regexp  (29)
	regexp : regexp . Tas ident  (32)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tor  shift 32
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tstar  shift 33
	Tmaybe  shift 34
	Tplus  shift 35
	Tlparen  shift 22
	Tas  shift 36
	Thash  shift 37
	Trule  reduce 4
	Trefill  reduce 4
	Tlet  reduce 4

	regexp  goto 38


state 24
	arguments : Tident . arguments  (12)
	arguments : .  (13)

	Tident  shift 24
	Tequal  reduce 13

	arguments  goto 39


state 25
	definition : Tident arguments . Tequal Tparse entry  (10)
	definition : Tident arguments . Tequal Tparse_shortest entry  (11)

	Tequal  shift 40
	.  error


state 26
	lexer_definition : header named_regexps refill_handler Trule definition other_definitions . header Tend  (1)
	other_definitions : other_definitions . Tand definition  (6)
	header : .  (3)

	Taction  shift 3
	Tand  shift 41
	Tend  reduce 3

	header  goto 42


state 27
	char_class1 : Tchar . Tdash Tchar  (36)
	char_class1 : Tchar .  (37)

	Tdash  shift 43
	Tchar  reduce 37
	Trbracket  reduce 37


state 28
	char_class : Tcaret . char_class1  (34)

	Tchar  shift 27
	.  error

	char_class1  goto 44


state 29
	regexp : Tlbracket char_class . Trbracket  (23)

	Trbracket  shift 45
	.  error


state 30
	char_class : char_class1 .  (35)
	char_class1 : char_class1 . char_class1  (38)

	Tchar  shift 27
	Trbracket  reduce 35

	char_class1  goto 46


state 31
	regexp : regexp . Tstar  (24)
	regexp : regexp . Tmaybe  (25)
	regexp : regexp . Tplus  (26)
	regexp : regexp . Thash regexp  (27)
	regexp : regexp . Tor regexp  (28)
	regexp : regexp . regexp  (29)
	regexp : Tlparen regexp . Trparen  (30)
	regexp : regexp . Tas ident  (32)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tor  shift 32
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tstar  shift 33
	Tmaybe  shift 34
	Tplus  shift 35
	Tlparen  shift 22
	Trparen  shift 47
	Tas  shift 36
	Thash  shift 37
	.  error

	regexp  goto 38


state 32
	regexp : regexp Tor . regexp  (28)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 48


state 33
	regexp : regexp Tstar .  (24)

	.  reduce 24


state 34
	regexp : regexp Tmaybe .  (25)

	.  reduce 25


state 35
	regexp : regexp Tplus .  (26)

	.  reduce 26


state 36
	regexp : regexp Tas . ident  (32)

	Tident  shift 49
	.  error

	ident  goto 50


state 37
	regexp : regexp Thash . regexp  (27)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 51


state 38
	regexp : regexp . Tstar  (24)
	regexp : regexp . Tmaybe  (25)
	regexp : regexp . Tplus  (26)
	regexp : regexp . Thash regexp  (27)
	regexp : regexp . Tor regexp  (28)
	regexp : regexp . regexp  (29)
	regexp : regexp regexp .  (29)
	regexp : regexp . Tas ident  (32)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tstar  shift 33
	Tmaybe  shift 34
	Tplus  shift 35
	Tlparen  shift 22
	Thash  shift 37
	Taction  reduce 29
	Trule  reduce 29
	Tor  reduce 29
	Trefill  reduce 29
	Trparen  reduce 29
	Tlet  reduce 29
	Tas  reduce 29

	regexp  goto 38


state 39
	arguments : Tident arguments .  (12)

	.  reduce 12


state 40
	definition : Tident arguments Tequal . Tparse entry  (10)
	definition : Tident arguments Tequal . Tparse_shortest entry  (11)

	Tparse  shift 52
	Tparse_shortest  shift 53
	.  error


state 41
	other_definitions : other_definitions Tand . definition  (6)

	Tident  shift 14
	.  error

	definition  goto 54


state 42
	lexer_definition : header named_regexps refill_handler Trule definition other_definitions header . Tend  (1)

	Tend  shift 55
	.  error


state 43
	char_class1 : Tchar Tdash . Tchar  (36)

	Tchar  shift 56
	.  error


state 44
	char_class : Tcaret char_class1 .  (34)
	char_class1 : char_class1 . char_class1  (38)

	Tchar  shift 27
	Trbracket  reduce 34

	char_class1  goto 46


state 45
	regexp : Tlbracket char_class Trbracket .  (23)

	.  reduce 23


state 46
	char_class1 : char_class1 . char_class1  (38)
	char_class1 : char_class1 char_class1 .  (38)

	Tchar  shift 27
	Trbracket  reduce 38

	char_class1  goto 46


state 47
	regexp : Tlparen regexp Trparen .  (30)

	.  reduce 30


state 48
	regexp : regexp . Tstar  (24)
	regexp : regexp . Tmaybe  (25)
	regexp : regexp . Tplus  (26)
	regexp : regexp . Thash regexp  (27)
	regexp : regexp . Tor regexp  (28)
	regexp : regexp Tor regexp .  (28)
	regexp : regexp . regexp  (29)
	regexp : regexp . Tas ident  (32)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tstar  shift 33
	Tmaybe  shift 34
	Tplus  shift 35
	Tlparen  shift 22
	Thash  shift 37
	Taction  reduce 28
	Trule  reduce 28
	Tor  reduce 28
	Trefill  reduce 28
	Trparen  reduce 28
	Tlet  reduce 28
	Tas  reduce 28

	regexp  goto 38


state 49
	ident : Tident .  (33)

	.  reduce 33


state 50
	regexp : regexp Tas ident .  (32)

	.  reduce 32


state 51
	regexp : regexp . Tstar  (24)
	regexp : regexp . Tmaybe  (25)
	regexp : regexp . Tplus  (26)
	regexp : regexp . Thash regexp  (27)
	regexp : regexp Thash regexp .  (27)
	regexp : regexp . Tor regexp  (28)
	regexp : regexp . regexp  (29)
	regexp : regexp . Tas ident  (32)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	Taction  reduce 27
	Trule  reduce 27
	Tor  reduce 27
	Trefill  reduce 27
	Tstar  reduce 27
	Tmaybe  reduce 27
	Tplus  reduce 27
	Trparen  reduce 27
	Tlet  reduce 27
	Tas  reduce 27
	Thash  reduce 27

	regexp  goto 38


state 52
	definition : Tident arguments Tequal Tparse . entry  (10)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tor  shift 57
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 58
	entry  goto 59
	case  goto 60


state 53
	definition : Tident arguments Tequal Tparse_shortest . entry  (11)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tor  shift 57
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 58
	entry  goto 61
	case  goto 60


state 54
	other_definitions : other_definitions Tand definition .  (6)

	.  reduce 6


state 55
	lexer_definition : header named_regexps refill_handler Trule definition other_definitions header Tend .  (1)

	.  reduce 1


state 56
	char_class1 : Tchar Tdash Tchar .  (36)

	.  reduce 36


state 57
	entry : Tor . case rest_of_entry  (15)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 58
	case  goto 62


state 58
	case : regexp . Taction  (18)
	regexp : regexp . Tstar  (24)
	regexp : regexp . Tmaybe  (25)
	regexp : regexp . Tplus  (26)
	regexp : regexp . Thash regexp  (27)
	regexp : regexp . Tor regexp  (28)
	regexp : regexp . regexp  (29)
	regexp : regexp . Tas ident  (32)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Taction  shift 63
	Tor  shift 32
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tstar  shift 33
	Tmaybe  shift 34
	Tplus  shift 35
	Tlparen  shift 22
	Tas  shift 36
	Thash  shift 37
	.  error

	regexp  goto 38


state 59
	definition : Tident arguments Tequal Tparse entry .  (10)

	.  reduce 10


state 60
	entry : case . rest_of_entry  (14)
	rest_of_entry : .  (17)

	.  reduce 17

	rest_of_entry  goto 64


state 61
	definition : Tident arguments Tequal Tparse_shortest entry .  (11)

	.  reduce 11


state 62
	entry : Tor case . rest_of_entry  (15)
	rest_of_entry : .  (17)

	.  reduce 17

	rest_of_entry  goto 65


state 63
	case : regexp Taction .  (18)

	.  reduce 18


state 64
	entry : case rest_of_entry .  (14)
	rest_of_entry : rest_of_entry . Tor case  (16)

	Tor  shift 66
	Taction  reduce 14
	Tand  reduce 14
	Tend  reduce 14


state 65
	entry : Tor case rest_of_entry .  (15)
	rest_of_entry : rest_of_entry . Tor case  (16)

	Tor  shift 66
	Taction  reduce 15
	Tand  reduce 15
	Tend  reduce 15


state 66
	rest_of_entry : rest_of_entry Tor . case  (16)

	Tident  shift 16
	Tchar  shift 17
	Tstring  shift 18
	Tunderscore  shift 19
	Teof  shift 20
	Tlbracket  shift 21
	Tlparen  shift 22
	.  error

	regexp  goto 58
	case  goto 67


state 67
	rest_of_entry : rest_of_entry Tor case .  (16)

	.  reduce 16


30 terminals, 16 nonterminals
40 grammar rules, 68 states
